--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,21 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	// https://mvnrepository.com/artifact/org.mongodb/mongodb-driver
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	//implementation group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.3'
+	implementation 'junit:junit:4.13.1'
+	// https://mvnrepository.com/artifact/junit/junit
+	testImplementation group: 'junit', name: 'junit', version: '4.12'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	testImplementation 'io.projectreactor:reactor-test'
 }
 
