--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	// https://mvnrepository.com/artifact/org.mongodb/mongodb-driver
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	//implementation group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.3'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
+    //implementation group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.3'
 	// https://mvnrepository.com/artifact/com.moowork.node/com.moowork.node.gradle.plugin
 
 
